--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -1,5 +1,6 @@
 .page {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   &__menu {
     position: fixed;
